Long and short postions distinguishable

--- a/MLR_FX_Strat.ipynb
+++ b/MLR_FX_Strat.ipynb
@@ -373,6 +373,123 @@
     "if __name__ == '__main__':\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PREVIOUS ENTRY AND EXIT TRADE SIMULATION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize variables for backtesting\n",
+    "capital = 100000  # Starting capital in dollars (or any unit)\n",
+    "position = None  # Keeps track of the current position ('long', 'short', or None)\n",
+    "entry_price = 0  # The price at which the position was entered\n",
+    "pips_per_trade = 0  # To track pips gained/lost in each trade\n",
+    "cumulative_pips = 0  # To track cumulative pips gained/lost over time\n",
+    "pips_list = []  # Track pips gained/lost per trade\n",
+    "\n",
+    "entry_points = []  # Track entry points for plotting\n",
+    "exit_points = []  # Track exit points for plotting\n",
+    "\n",
+    "# Define take profit and stop loss (in pips)\n",
+    "take_profit_pips = 50\n",
+    "stop_loss_pips = 30\n",
+    "\n",
+    "# Convert pips to actual price movement for EURUSD (1 pip = 0.0001)\n",
+    "pip_value = 0.0001\n",
+    "\n",
+    "for i in range(len(y_test)):\n",
+    "    # Buy Signal (Enter Long)\n",
+    "    if buy_signals[i][0] is not None and position is None:\n",
+    "        position = 'long'\n",
+    "        entry_price = y_test.iloc[i]  # Enter at the current price\n",
+    "\n",
+    "        entry_time = time_test.iloc[i]\n",
+    "        entry_points.append((entry_time, entry_price))  # Track entry point\n",
+    "\n",
+    "\n",
+    "    # Sell Signal (Enter Short)\n",
+    "    elif sell_signals[i][0] is not None and position is None:\n",
+    "        position = 'short'\n",
+    "        entry_price = y_test.iloc[i]  # Enter at the current price\n",
+    "\n",
+    "        entry_time = time_test.iloc[i]\n",
+    "        entry_points.append((entry_time, entry_price))  # Track entry point\n",
+    "\n",
+    "\n",
+    "    # Exit Long Position\n",
+    "    elif position == 'long':\n",
+    "        # Calculate pips gained\n",
+    "        price_diff = y_test.iloc[i] - entry_price\n",
+    "        pips_per_trade = price_diff / pip_value\n",
+    "\n",
+    "        # Check if take profit or stop loss is hit\n",
+    "        if pips_per_trade >= take_profit_pips or pips_per_trade <= -stop_loss_pips:\n",
+    "            cumulative_pips += pips_per_trade\n",
+    "            pips_list.append(pips_per_trade)\n",
+    "            exit_points.append((time_test.iloc[i], y_test.iloc[i]))  # Track exit point\n",
+    "            position = None  # Exit position after trade\n",
+    "\n",
+    "    # Exit Short Position\n",
+    "    elif position == 'short':\n",
+    "        # Calculate pips gained (inverse for short position)\n",
+    "        price_diff = entry_price - y_test.iloc[i]\n",
+    "        pips_per_trade = price_diff / pip_value\n",
+    "\n",
+    "        # Check if take profit or stop loss is hit\n",
+    "        if pips_per_trade >= take_profit_pips or pips_per_trade <= -stop_loss_pips:\n",
+    "            cumulative_pips += pips_per_trade\n",
+    "            pips_list.append(pips_per_trade)\n",
+    "            exit_points.append((time_test.iloc[i], y_test.iloc[i]))  # Track exit point\n",
+    "\n",
+    "            position = None  # Exit position after trade\n",
+    "\n",
+    "# After the loop: Plotting the results\n",
+    "\n",
+    "# Extract entry and exit times and prices for plotting\n",
+    "entry_times = [point[0] for point in entry_points]\n",
+    "entry_prices = [point[1] for point in entry_points]\n",
+    "exit_times = [point[0] for point in exit_points]\n",
+    "exit_prices = [point[1] for point in exit_points]\n",
+    "\n",
+    "# Plot the price chart with entry and exit points\n",
+    "plt.figure(figsize=(14, 7))\n",
+    "plt.plot(resultsDataFrame['Date and Time'], resultsDataFrame['Actual closing'], label='Actual Closing Price', color='blue')\n",
+    "plt.plot(resultsDataFrame['Date and Time'], resultsDataFrame['50 SMA'], label='50 SMA', color='green', linestyle='-')\n",
+    "plt.plot(resultsDataFrame['Date and Time'], resultsDataFrame['200 SMA'], label='200 SMA', color='orange', linestyle='-')\n",
+    "\n",
+    "# Plot buy and sell signals\n",
+    "plt.scatter(entry_times, entry_prices, marker='^', color='green', label='Entry Point', alpha=1, s=100)\n",
+    "plt.scatter(exit_times, exit_prices, marker='v', color='red', label='Exit Point', alpha=1, s=100)\n",
+    "\n",
+    "plt.xlabel('DateTime')\n",
+    "plt.ylabel('Price')\n",
+    "plt.title('Price Chart with Trade Entry and Exit Points')\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
+    "# After the loop: Analyze the strategy performance\n",
+    "total_trades = len(pips_list)\n",
+    "winning_trades = len([p for p in pips_list if p > 0])\n",
+    "losing_trades = total_trades - winning_trades\n",
+    "win_rate = winning_trades / total_trades if total_trades > 0 else 0\n",
+    "\n",
+    "# Display the backtesting results\n",
+    "print(f\"Total Trades: {total_trades}\")\n",
+    "print(f\"Winning Trades: {winning_trades}\")\n",
+    "print(f\"Losing Trades: {losing_trades}\")\n",
+    "print(f\"Win Rate: {win_rate * 100:.2f}%\")\n",
+    "print(f\"Cumulative Pips: {cumulative_pips:.2f}\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
