Multivariate feature engineered

--- a/MLR_forecast.ipynb
+++ b/MLR_forecast.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,8 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.metrics import r2_score\n",
-    "\n"
+    "\n",
+    "import talib"
    ]
   },
   {
@@ -510,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -557,9 +558,9 @@
     "    X_df = pd.DataFrame(X, columns=feature_columns)\n",
     "    Y_df = pd.DataFrame(Y, columns=['response'])\n",
     "\n",
-    "    updatedDataset = pd.concat([X_df, Y_df], axis=1)\n",
+    "    data = pd.concat([X_df, Y_df], axis=1)\n",
     "\n",
-    "    return updatedDataset, X_df,Y_df\n",
+    "    return data, X_df,Y_df\n",
     "\n",
     "filepath = './Data/EURUSD_D1.csv' \n",
     "datasetX = data_loader(filepath)\n",
@@ -738,46 +739,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4814, 24)\n"
+     ]
+    }
+   ],
    "source": [
     "# Feature Engineering\n",
     "\n",
-    "def multivariateFeatureEngineering(updatedDataset):\n",
-    "    updatedDataset['Time'] = pd.to_datetime(updatedDataset['Time'],format='%Y-%m-%d %H:%M:%S')\n",
+    "def multivariateFeatureEngineering(filepath):\n",
+    "    data = pd.read_csv(filepath)\n",
+    "\n",
+    "    data['Time'] = pd.to_datetime(data['Time'],format='%Y-%m-%d %H:%M:%S')\n",
     "    \n",
     "    '''\n",
     "        Feature Egineering - Added features: MA, EMA, MACD, RSI\n",
     "    '''\n",
     "    #Trend following Indicators:\n",
     "\n",
-    "    #SMA\n",
-    "    updatedDataset['50_sma'] = updatedDataset['Close'].rolling(window=50).mean() \n",
-    "    updatedDataset['200_sma'] = updatedDataset['Close'].rolling(window=200).mean() \n",
+    "    #SMA - identofy long term trend\n",
+    "    data['50_sma'] = data['Close'].rolling(window=50).mean() \n",
+    "    data['200_sma'] = data['Close'].rolling(window=200).mean() \n",
     "\n",
-    "    #EMA\n",
+    "    #EMA - trend analysis: more weight applied to recent points\n",
+    "    data['50_ema'] = data['Close'].ewm(span=50, adjust=False).mean()\n",
+    "    data['100_ema'] = data['Close'].ewm(span=100, adjust=False).mean()\n",
     "\n",
-    "    \n",
     "    #MACD\n",
-    "    updatedDataset['12_ema'] = updatedDataset['Close'].ewm(span=12, adjust=False).mean()\n",
-    "    updatedDataset['26_ema'] = updatedDataset['Close'].ewm(span=26, adjust=False).mean()\n",
-    "    updatedDataset['MACD_line'] = updatedDataset['12_ema']-updatedDataset['26_ema'] # calculate the MACD line\n",
-    "    updatedDataset['Signal_line'] = updatedDataset['MACD_line'].ewm(span=9, adjust=False).mean() # 9-preiod ema signal calculated from the Macdline\n",
-    "    updatedDataset['MACD_histogram'] = updatedDataset['MACD_line'] - updatedDataset['Signal_line']\n",
+    "    data['12_ema'] = data['Close'].ewm(span=12, adjust=False).mean()\n",
+    "    data['26_ema'] = data['Close'].ewm(span=26, adjust=False).mean()\n",
+    "    data['MACD_line'] = data['12_ema']-data['26_ema'] # calculate the MACD line\n",
+    "    data['Signal_line'] = data['MACD_line'].ewm(span=9, adjust=False).mean() # 9-preiod ema signal calculated from the Macdline\n",
+    "    data['MACD_histogram'] = data['MACD_line'] - data['Signal_line']\n",
     "\n",
     "    #ADX\n",
+    "    # Calculate ADX using TA-Lib (14-period by default)\n",
+    "    data['ADX'] = talib.ADX(data['High'], data['Low'], data['Close'], timeperiod=14)\n",
     "\n",
+    "    #Momentum indicators:\n",
     "\n",
-    "    #Momentum indicators\n",
+    "    #RSI - 14-period\n",
+    "    data['RSI'] = talib.RSI(data['Close'], timeperiod=14)\n",
+    "    \n",
+    "    #Stochastic Oscillator\n",
+    "    data['stoch_k'], data['stoch_d'] = talib.STOCH(data['High'], data['Low'], data['Close'], \n",
+    "                                                fastk_period=14, slowk_period=3, slowd_period=3)\n",
     "\n",
-    "    #Volatility indicators\n",
+    "    #Williams %R - Default period is 14\n",
+    "    data['Williams_R'] = talib.WILLR(data['High'], data['Low'], data['Close'], timeperiod=14)\n",
+    "\n",
+    "    #Volatility indicators#:\n",
+    "\n",
+    "    #Bollinger Bands - Default period is 20 for moving average and standard deviation (can be adjusted)\n",
+    "    data['upper_band'], data['middle_band'], data['lower_band'] = talib.BBANDS(data['Close'], timeperiod=20, nbdevup=2, nbdevdn=2, matype=0)\n",
+    "\n",
+    "    #ATR -Default period for ATR is 14\n",
+    "    data['ATR'] = talib.ATR(data['High'], data['Low'], data['Close'], timeperiod=14)\n",
     "\n",
     "   \n",
-    "    updatedDataset = updatedDataset.dropna() # drop rows that have NA\n",
+    "    data = data.dropna() # drop rows that have NA\n",
+    "\n",
+    "    return data\n",
     "\n",
     "\n",
-    "    return updatedDataset\n"
+    "multivariateDataset = multivariateFeatureEngineering(filepath)\n",
+    "\n",
+    "print(multivariateDataset.shape)\n"
    ]
   }
  ],
