Unifeature Polynomial model complete

--- a/PolyRgress.ipynb
+++ b/PolyRgress.ipynb
@@ -248,51 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "forcasted response type: [[1.09486075]] and input: [1.09505 1.09259 1.09273 1.09149]\n",
-      "i = 0:\n",
-      " forecast Prediction: [[1.09486075]]\n",
-      "Input into mode: [1.09259    1.09273    1.09149    1.09486075]\n",
-      "i = 1:\n",
-      " forecast Prediction: [[1.09532541]]\n",
-      "Input into mode: [1.09273    1.09149    1.09486075 1.09532541]\n",
-      "i = 2:\n",
-      " forecast Prediction: [[1.0960435]]\n",
-      "Input into mode: [1.09149    1.09486075 1.09532541 1.0960435 ]\n",
-      "i = 3:\n",
-      " forecast Prediction: [[1.09678243]]\n",
-      "Input into mode: [1.09486075 1.09532541 1.0960435  1.09678243]\n",
-      "i = 4:\n",
-      " forecast Prediction: [[1.09780809]]\n",
-      "Input into mode: [1.09532541 1.0960435  1.09678243 1.09780809]\n",
-      "i = 5:\n",
-      " forecast Prediction: [[1.09851689]]\n",
-      "Input into mode: [1.0960435  1.09678243 1.09780809 1.09851689]\n",
-      "i = 6:\n",
-      " forecast Prediction: [[1.09923013]]\n",
-      "Input into mode: [1.09678243 1.09780809 1.09851689 1.09923013]\n",
-      "i = 7:\n",
-      " forecast Prediction: [[1.0999276]]\n",
-      "Input into mode: [1.09780809 1.09851689 1.09923013 1.0999276 ]\n",
-      "i = 8:\n",
-      " forecast Prediction: [[1.10061121]]\n",
-      "Input into mode: [1.09851689 1.09923013 1.0999276  1.10061121]\n",
-      "i = 9:\n",
-      " forecast Prediction: [[1.10123747]]\n",
-      "Input into mode: [1.09923013 1.0999276  1.10061121 1.10123747]\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_343861/3004600107.py:19: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "/tmp/ipykernel_343861/1356549714.py:17: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  test_last_point[-1] = y_predict  # Add the new prediction at the end\n"
      ]
     },
@@ -309,7 +272,7 @@
    ],
    "source": [
     "test_last_point =[]\n",
-    "test_last_point = x_test.iloc[-1].to_numpy()  # Use the last row of X_test (100 previous time steps) - if using STD scalar , comment out\n",
+    "test_last_point = x_test.iloc[-1].to_numpy()  # Use the last row of X_test (X previous time steps) - if using STD scalar , comment out\n",
     "forecastedRate = []\n",
     "\n",
     "n_future = 10 \n",
