FNN - Create additional features

--- a/FNN_Forecast.ipynb
+++ b/FNN_Forecast.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import talib\n",
+    "import numpy as np"
    ]
   },
   {
@@ -432,17 +434,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Batch 1\n",
+      "Features: tensor([[1.3620, 1.3674, 1.3627, 1.3627, 1.3736, 1.3618, 1.3618, 1.3678, 1.3481,\n",
+      "         1.3481, 1.3647, 1.3574, 1.3574, 1.3638, 1.3527],\n",
+      "        [1.3627, 1.3736, 1.3618, 1.3618, 1.3678, 1.3481, 1.3481, 1.3647, 1.3574,\n",
+      "         1.3574, 1.3638, 1.3527, 1.3528, 1.3591, 1.3287],\n",
+      "        [1.3618, 1.3678, 1.3481, 1.3481, 1.3647, 1.3574, 1.3574, 1.3638, 1.3527,\n",
+      "         1.3528, 1.3591, 1.3287, 1.3228, 1.3284, 1.3266],\n",
+      "        [1.3481, 1.3647, 1.3574, 1.3574, 1.3638, 1.3527, 1.3528, 1.3591, 1.3287,\n",
+      "         1.3228, 1.3284, 1.3266, 1.3267, 1.3280, 1.3188],\n",
+      "        [1.3574, 1.3638, 1.3527, 1.3528, 1.3591, 1.3287, 1.3228, 1.3284, 1.3266,\n",
+      "         1.3267, 1.3280, 1.3188, 1.3188, 1.3342, 1.3256],\n",
+      "        [1.3528, 1.3591, 1.3287, 1.3228, 1.3284, 1.3266, 1.3267, 1.3280, 1.3188,\n",
+      "         1.3188, 1.3342, 1.3256, 1.3256, 1.3286, 1.3243],\n",
+      "        [1.3228, 1.3284, 1.3266, 1.3267, 1.3280, 1.3188, 1.3188, 1.3342, 1.3256,\n",
+      "         1.3256, 1.3286, 1.3243, 1.3240, 1.3517, 1.3472],\n",
+      "        [1.3267, 1.3280, 1.3188, 1.3188, 1.3342, 1.3256, 1.3256, 1.3286, 1.3243,\n",
+      "         1.3240, 1.3517, 1.3472, 1.3472, 1.3495, 1.3484],\n",
+      "        [1.3188, 1.3342, 1.3256, 1.3256, 1.3286, 1.3243, 1.3240, 1.3517, 1.3472,\n",
+      "         1.3472, 1.3495, 1.3484, 1.3496, 1.3552, 1.3535],\n",
+      "        [1.3256, 1.3286, 1.3243, 1.3240, 1.3517, 1.3472, 1.3472, 1.3495, 1.3484,\n",
+      "         1.3496, 1.3552, 1.3535, 1.3535, 1.3582, 1.3322],\n",
+      "        [1.3240, 1.3517, 1.3472, 1.3472, 1.3495, 1.3484, 1.3496, 1.3552, 1.3535,\n",
+      "         1.3535, 1.3582, 1.3322, 1.3322, 1.3397, 1.3268],\n",
+      "        [1.3472, 1.3495, 1.3484, 1.3496, 1.3552, 1.3535, 1.3535, 1.3582, 1.3322,\n",
+      "         1.3322, 1.3397, 1.3268, 1.3268, 1.3307, 1.3251],\n",
+      "        [1.3496, 1.3552, 1.3535, 1.3535, 1.3582, 1.3322, 1.3322, 1.3397, 1.3268,\n",
+      "         1.3268, 1.3307, 1.3251, 1.3251, 1.3335, 1.3121],\n",
+      "        [1.3535, 1.3582, 1.3322, 1.3322, 1.3397, 1.3268, 1.3268, 1.3307, 1.3251,\n",
+      "         1.3251, 1.3335, 1.3121, 1.3120, 1.3188, 1.3184],\n",
+      "        [1.3322, 1.3397, 1.3268, 1.3268, 1.3307, 1.3251, 1.3251, 1.3335, 1.3121,\n",
+      "         1.3120, 1.3188, 1.3184, 1.3186, 1.3189, 1.3154],\n",
+      "        [1.3268, 1.3307, 1.3251, 1.3251, 1.3335, 1.3121, 1.3120, 1.3188, 1.3184,\n",
+      "         1.3186, 1.3189, 1.3154, 1.3154, 1.3391, 1.3375],\n",
+      "        [1.3251, 1.3335, 1.3121, 1.3120, 1.3188, 1.3184, 1.3186, 1.3189, 1.3154,\n",
+      "         1.3154, 1.3391, 1.3375, 1.3375, 1.3377, 1.3268],\n",
+      "        [1.3120, 1.3188, 1.3184, 1.3186, 1.3189, 1.3154, 1.3154, 1.3391, 1.3375,\n",
+      "         1.3375, 1.3377, 1.3268, 1.3268, 1.3297, 1.3221],\n",
+      "        [1.3186, 1.3189, 1.3154, 1.3154, 1.3391, 1.3375, 1.3375, 1.3377, 1.3268,\n",
+      "         1.3268, 1.3297, 1.3221, 1.3223, 1.3268, 1.3185],\n",
+      "        [1.3154, 1.3391, 1.3375, 1.3375, 1.3377, 1.3268, 1.3268, 1.3297, 1.3221,\n",
+      "         1.3223, 1.3268, 1.3185, 1.3184, 1.3193, 1.3043],\n",
+      "        [1.3375, 1.3377, 1.3268, 1.3268, 1.3297, 1.3221, 1.3223, 1.3268, 1.3185,\n",
+      "         1.3184, 1.3193, 1.3043, 1.3058, 1.3059, 1.3007],\n",
+      "        [1.3268, 1.3297, 1.3221, 1.3223, 1.3268, 1.3185, 1.3184, 1.3193, 1.3043,\n",
+      "         1.3058, 1.3059, 1.3007, 1.3007, 1.3018, 1.2904],\n",
+      "        [1.3223, 1.3268, 1.3185, 1.3184, 1.3193, 1.3043, 1.3058, 1.3059, 1.3007,\n",
+      "         1.3007, 1.3018, 1.2904, 1.2904, 1.2994, 1.2936],\n",
+      "        [1.3184, 1.3193, 1.3043, 1.3058, 1.3059, 1.3007, 1.3007, 1.3018, 1.2904,\n",
+      "         1.2904, 1.2994, 1.2936, 1.2935, 1.3037, 1.3008],\n",
+      "        [1.3058, 1.3059, 1.3007, 1.3007, 1.3018, 1.2904, 1.2904, 1.2994, 1.2936,\n",
+      "         1.2935, 1.3037, 1.3008, 1.3007, 1.3161, 1.3125],\n",
+      "        [1.3007, 1.3018, 1.2904, 1.2904, 1.2994, 1.2936, 1.2935, 1.3037, 1.3008,\n",
+      "         1.3007, 1.3161, 1.3125, 1.3125, 1.3301, 1.3240],\n",
+      "        [1.2904, 1.2994, 1.2936, 1.2935, 1.3037, 1.3008, 1.3007, 1.3161, 1.3125,\n",
+      "         1.3125, 1.3301, 1.3240, 1.3244, 1.3246, 1.3218],\n",
+      "        [1.2935, 1.3037, 1.3008, 1.3007, 1.3161, 1.3125, 1.3125, 1.3301, 1.3240,\n",
+      "         1.3244, 1.3246, 1.3218, 1.3218, 1.3218, 1.3023],\n",
+      "        [1.3007, 1.3161, 1.3125, 1.3125, 1.3301, 1.3240, 1.3244, 1.3246, 1.3218,\n",
+      "         1.3218, 1.3218, 1.3023, 1.3023, 1.3166, 1.3131],\n",
+      "        [1.3125, 1.3301, 1.3240, 1.3244, 1.3246, 1.3218, 1.3218, 1.3218, 1.3023,\n",
+      "         1.3023, 1.3166, 1.3131, 1.3131, 1.3339, 1.3266],\n",
+      "        [1.3244, 1.3246, 1.3218, 1.3218, 1.3218, 1.3023, 1.3023, 1.3166, 1.3131,\n",
+      "         1.3131, 1.3339, 1.3266, 1.3266, 1.3385, 1.3244],\n",
+      "        [1.3218, 1.3218, 1.3023, 1.3023, 1.3166, 1.3131, 1.3131, 1.3339, 1.3266,\n",
+      "         1.3266, 1.3385, 1.3244, 1.3243, 1.3327, 1.3270]])\n",
+      "Labels: tensor([[1.3287],\n",
+      "        [1.3266],\n",
+      "        [1.3188],\n",
+      "        [1.3256],\n",
+      "        [1.3243],\n",
+      "        [1.3472],\n",
+      "        [1.3484],\n",
+      "        [1.3535],\n",
+      "        [1.3322],\n",
+      "        [1.3268],\n",
+      "        [1.3251],\n",
+      "        [1.3121],\n",
+      "        [1.3184],\n",
+      "        [1.3154],\n",
+      "        [1.3375],\n",
+      "        [1.3268],\n",
+      "        [1.3221],\n",
+      "        [1.3185],\n",
+      "        [1.3043],\n",
+      "        [1.3007],\n",
+      "        [1.2904],\n",
+      "        [1.2936],\n",
+      "        [1.3008],\n",
+      "        [1.3125],\n",
+      "        [1.3240],\n",
+      "        [1.3218],\n",
+      "        [1.3023],\n",
+      "        [1.3131],\n",
+      "        [1.3266],\n",
+      "        [1.3244],\n",
+      "        [1.3270],\n",
+      "        [1.3287]])\n"
+     ]
+    }
+   ],
    "source": [
+    "###################### Data Loading and additional feature engineering ###########################\n",
+    "def multivariateFeatureEngineering(filepath):\n",
+    "    data = pd.read_csv(filepath)\n",
+    "\n",
+    "    data['Time'] = pd.to_datetime(data['Time'],format='%Y-%m-%d %H:%M:%S')\n",
+    "    \n",
+    "    '''\n",
+    "        Feature Egineering - Added features: MA, EMA, MACD, RSI\n",
+    "    '''\n",
+    "    #Trend following Indicators:\n",
+    "\n",
+    "    #SMA - identofy long term trend\n",
+    "    data['50_sma'] = data['Close'].rolling(window=50).mean() \n",
+    "    data['200_sma'] = data['Close'].rolling(window=200).mean() \n",
+    "\n",
+    "    #EMA - trend analysis: more weight applied to recent points\n",
+    "    data['50_ema'] = data['Close'].ewm(span=50, adjust=False).mean()\n",
+    "    data['100_ema'] = data['Close'].ewm(span=100, adjust=False).mean()\n",
+    "\n",
+    "    #MACD\n",
+    "    data['12_ema'] = data['Close'].ewm(span=12, adjust=False).mean()\n",
+    "    data['26_ema'] = data['Close'].ewm(span=26, adjust=False).mean()\n",
+    "    data['MACD_line'] = data['12_ema']-data['26_ema'] # calculate the MACD line\n",
+    "    data['Signal_line'] = data['MACD_line'].ewm(span=9, adjust=False).mean() # 9-preiod ema signal calculated from the Macdline\n",
+    "    data['MACD_histogram'] = data['MACD_line'] - data['Signal_line']\n",
+    "\n",
+    "    #ADX\n",
+    "    # Calculate ADX using TA-Lib (14-period by default)\n",
+    "    data['ADX'] = talib.ADX(data['High'], data['Low'], data['Close'], timeperiod=14)\n",
+    "\n",
+    "    #Momentum indicators:\n",
+    "\n",
+    "    #RSI - 14-period\n",
+    "    data['RSI'] = talib.RSI(data['Close'], timeperiod=14)\n",
+    "    \n",
+    "    #Stochastic Oscillator\n",
+    "    data['stoch_k'], data['stoch_d'] = talib.STOCH(data['High'], data['Low'], data['Close'], \n",
+    "                                                fastk_period=14, slowk_period=3, slowd_period=3)\n",
+    "\n",
+    "    #Williams %R - Default period is 14\n",
+    "    data['Williams_R'] = talib.WILLR(data['High'], data['Low'], data['Close'], timeperiod=14)\n",
+    "\n",
+    "    #Volatility indicators#:\n",
+    "\n",
+    "    #Bollinger Bands - Default period is 20 for moving average and standard deviation (can be adjusted)\n",
+    "    data['upper_band'], data['middle_band'], data['lower_band'] = talib.BBANDS(data['Close'], timeperiod=20, nbdevup=2, nbdevdn=2, matype=0)\n",
+    "\n",
+    "    #ATR -Default period for ATR is 14\n",
+    "    data['ATR'] = talib.ATR(data['High'], data['Low'], data['Close'], timeperiod=14)\n",
+    "\n",
+    "    data = data.dropna() # drop rows that have NA\n",
+    "\n",
+    "    return data\n",
+    "\n",
     "# calculate the additional features\n",
+    "file_path = './Data/EURUSD_D1.csv'  \n",
+    "multifeatureData = multivariateFeatureEngineering(file_path) # Load dataset\n",
+    "multifeatureData = multifeatureData.drop(columns=['Time']).reset_index(drop=True) #drop time columns\n",
+    "cols = [col for col in multifeatureData.columns if col!='Close'] +['Close'] #shift Close to end\n",
+    "multifeatureData =multifeatureData[cols]\n",
     "\n",
-    "#Calculte the lagged features\n",
+    "################################## Calculte the lagged features - Data Loader #####################################\n",
+    "n_past= 5\n",
+    "n_future =1\n",
+    "target_column =-1\n",
+    "selected_features = ['Open', 'High', 'Close']\n",
+    "data = multifeatureData[selected_features] #subset selection of features and model performance ->convert to numpy array if error\n",
+    "print(type(data))\n",
     "\n",
-    "# Load dataset\n",
+    "\n",
+    "class mf_ForexDataset(Dataset):\n",
+    "    def __init__(self, data, n_past, n_future, target_column=1):\n",
+    "        # Create the lagged features and corresponding responses\n",
+    "        self.features, self.response = self.create_lagged_features(data, n_past, n_future, target_column)\n",
+    "\n",
+    "    def create_lagged_features(self, data, n_past, n_future, target_column):\n",
+    "        features = []\n",
+    "        response = []\n",
+    "\n",
+    "        for i in range(n_past, len(data) - n_future + 1):\n",
+    "            # Extract n_past steps for features\n",
+    "            features.append(data.iloc[i - n_past:i, :].values)  # All columns as features\n",
+    "\n",
+    "            # Extract the target (Close price in this case)\n",
+    "            response.append(data.iloc[i + n_future - 1, target_column])  # Target column\n",
+    "        \n",
+    "        # Convert to NumPy arrays\n",
+    "        features = np.array(features)\n",
+    "        response = np.array(response)\n",
+    "\n",
+    "        # Flatten the features for input into a fully connected network (if needed)\n",
+    "        features_flat = features.reshape(features.shape[0], -1)\n",
+    "\n",
+    "        # Convert to PyTorch tensors\n",
+    "        features_tensor = torch.tensor(features_flat, dtype=torch.float32)\n",
+    "        response_tensor = torch.tensor(response, dtype=torch.float32).unsqueeze(1)  # Add extra dimension to target\n",
+    "\n",
+    "        return features_tensor, response_tensor\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.features)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.features[idx], self.response[idx]\n",
+    "\n",
+    "\n",
+    "dataset = mf_ForexDataset(data, n_past, n_future, target_column)\n",
+    "mf_dataloader = DataLoader(dataset, batch_size=32, shuffle=False)\n",
+    "\n",
+    "# Example: Iterate over the dataloader - verify shape\n",
+    "for batch_idx, (features, labels) in enumerate(mf_dataloader):\n",
+    "    print(f\"Batch {batch_idx + 1}\")\n",
+    "    print(f\"Features: {features}\")  # (batch_size, n_past * num_features)\n",
+    "    print(f\"Labels: {labels}\")      # (batch_size, 1)\n",
+    "    # Use the features and labels for model training\n",
+    "    break  # Break after the first batch for demonstration\n",
+    "\n",
+    "# scale data\n",
     "\n",
     "# Train fNN model\n",
+    "\n",
     "\n",
     "# Test FNN model\n",
     "\n",
