Poly Reg - multivariate forecasting complete - discuss feature selection

--- a/MLR_forecast.ipynb
+++ b/MLR_forecast.ipynb
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1315,53 +1315,25 @@
     "# reshape an input data into n_samples x timesteps x n_features.\n",
     "# NOTE: data should be standardized\n",
     "\n",
-    "# def multivariateFeatureLag(data, n_past, n_future, target_column=1):\n",
-    "#     features = []\n",
-    "#     response = []\n",
-    "\n",
-    "#     for i in range(n_past, len(data) - n_future + 1):\n",
-    "#         # Extract the past n_past time steps as features\n",
-    "#         features.append(data[i - n_past:i, :])  # Take all columns as features\n",
-    "\n",
-    "#         # Extract the target value (Close price in this case)\n",
-    "#         response.append(data[i + n_future - 1, target_column])  # Extract the target column for response\n",
-    "\n",
-    "#     # Move the conversion to NumPy arrays outside the loop\n",
-    "#     features = np.array(features)  # Convert to NumPy array after the loop finishes\n",
-    "#     response = np.array(response)  # Convert to NumPy array after the loop finishes\n",
-    "\n",
-    "#     features_flat = features.reshape(features.shape[0], -1) # make shape 2d\n",
-    "\n",
-    "#     return features_flat, response\n",
-    "\n",
-    "def multivariateFeatureLag( data, n_past, n_future, target_column):\n",
+    "def multivariateFeatureLag(data, n_past, n_future, target_column=1):\n",
     "    features = []\n",
     "    response = []\n",
     "\n",
-    "    num_features = data.shape[1]  # Number of features in the dataset\n",
-    "\n",
     "    for i in range(n_past, len(data) - n_future + 1):\n",
-    "        lagged_features = []\n",
+    "        # Extract the past n_past time steps as features\n",
+    "        features.append(data[i - n_past:i, :])  # Take all columns as features\n",
     "\n",
-    "        # Extract lags for each feature and group them accordingly\n",
-    "        for feature_idx in range(num_features):\n",
-    "            # Get the lags for a specific feature\n",
-    "            feature_lags = data[i - n_past:i, feature_idx]  # Past n_past values for the feature\n",
-    "            lagged_features.extend(feature_lags)  # Append the lags to the feature list\n",
+    "        # Extract the target value (Close price in this case)\n",
+    "        response.append(data[i + n_future - 1, target_column])  # Extract the target column for response\n",
     "\n",
-    "        features.append(lagged_features)  # Append the lagged features for the current row\n",
-    "\n",
-    "        # Extract the target (Close price in this case)\n",
-    "        response.append(data[i + n_future - 1, target_column])  # Target column\n",
-    "\n",
-    "    # Convert to NumPy arrays\n",
-    "    features = np.array(features)\n",
-    "    response = np.array(response)\n",
+    "    # Move the conversion to NumPy arrays outside the loop\n",
+    "    features = np.array(features)  # Convert to NumPy array after the loop finishes\n",
+    "    response = np.array(response)  # Convert to NumPy array after the loop finishes\n",
     "\n",
     "    features_flat = features.reshape(features.shape[0], -1) # make shape 2d\n",
     "\n",
-    "\n",
     "    return features_flat, response\n",
+    "\n",
     "\n",
     "n_past = 5 \n",
     "n_future = 1\n",
@@ -1394,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
